book/tests/snapshots/snapshot__run_reference_prql@s-strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/s-strings-3.prql
---
SELECT
  "project-foo".dataset.table.*,
  "project-bar".dataset.table.*,
  col_bax
FROM
  "project-foo.dataset.table"
  JOIN "project-bar.dataset.table" USING(col_bax)
