book/tests/snapshots/snapshot__run_reference_prql@s-strings-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/s-strings-4.prql
---
SELECT
  employees.*,
  salary + benefits AS gross_salary,
  365 / salary + benefits AS daily_rate
FROM
  employees
