book/tests/snapshots/snapshot__run_reference_prql@select-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/select-2.prql
---
SELECT
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees
