book/tests/snapshots/snapshot__run_reference_prql@sort-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/sort-1.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  age DESC
