book/tests/snapshots/snapshot__run_reference_prql@sql-parameters-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/sql-parameters-0.prql
---
SELECT
  *
FROM
  mytable
WHERE
  id = $1
